# uoh-ay26

./: .gitignore  README.md  check_cuda.py  pyproject.toml  requirements.txt
docs/: PLAN.md  PRD.md  PRD_dataset.md  PRD_fc.md  PRD_lstm.md  PRD_rnn.md  PROMPT_BOOK.md  TODO.md
results/: metrics.csv
src/: __init__.py  config.py  data_generator.py  evaluate.py  evaluate_sweep.py  main.py  models.py  pipeline.py  plot_basic.py  plot_comparison.py  plot_style.py  plots.py  signals.py  train.py
tests/: conftest.py  test_dataset.py  test_dataset_loading.py  test_evaluation.py  test_models.py  test_pipeline.py  test_training.py  test_training_evaluation.py
