[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "uoh-ay26"
version     = "0.1.0"
description = "Signal Reconstruction (Denoising): FC vs RNN vs LSTM — Assignment 01"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts  = "--cov=src --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length    = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # line-length is advisory; formatter handles it

[tool.coverage.run]
source = ["src"]
omit   = [
    "src/__pycache__/*",
    "src/main.py",
    "src/config.py",
    "src/plot_basic.py",
    "src/plot_comparison.py",
]

